--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -15,3 +15,5 @@
     </tr>
   <%end%>
 </table>
+
+<%= link_to_if(params[:as]=='sender', '收件箱', messages_path) { link_to '发件箱', messages_path(:as => 'sender') } %>
