--- a/app/views/training_views/show.html.erb
+++ b/app/views/training_views/show.html.erb
@@ -27,32 +27,10 @@
 <%end%>
   
 <h1>要参加这次训练的人</h1>
-<%@training.users.each do |user|%>
-  <dl>
-    <dt><%=link_to  user_image_tag(user), user_view_path(user.id) %></dt>
-    <dd><%=link_to user.nickname, user_view_path(user.id)%></dd>
-  </dl>
-<%end%>
-
+<%= render(:partial => 'shared/user_icon', :collection => @training.users)%>
 
 <h1>关于本次训练的讨论</h1>
-<table>
-  <tr>
-    <th>话题</th>
-    <th>作者</th>
-    <th>回复</th>
-    <th>最后回复</th>
-  </tr>
-
-<% for post in @posts %>
-  <tr>
-    <td><%=link_to h(post.title), post  %></td>
-    <td><%=h post.user.nickname %></td>
-    <td><%= post.replies.size %></td>
-    <td><%= post.updated_at.strftime('%Y-%m-%d %H:%M:%S') %></td>
-  </tr>
-<% end %>
-</table>
+<%= render(:partial => 'shared/post_list', :object => @posts)%>
 
 <br />
 <%= link_to '发言', new_training_post_path(@training) %>
