--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,6 +1,1 @@
-<%@users.each do |user| %>
-  <dl>
-    <dt><%=link_to  user_image_tag(user), user_path(user.id) %></dt>
-    <dd><%=link_to user.nickname, user_path(user.id)%></dd>
-  </dl>
-<%end%>
+<%= render(:partial => 'shared/user_icon', :collection => @users)%>
