--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
   <p><label for="favorite_team">我喜欢球队</label><br/>
   <%= f.text_field :favorite_team %></p>
   
-  <p><label for="summary">个人简介</label><br/>
+  <p><label for="summary">自我介绍</label><br/>
   <%= f.text_area :summary %></p>
   
   <p>
