--- a/app/views/training_views/show.html.erb
+++ b/app/views/training_views/show.html.erb
@@ -15,7 +15,7 @@
 
 <p>
   <label>说明</label>
-  <%=simple_format auto_link(@training.summary, :urls, :target => '_blank')%>
+  <%=simple_format auto_link(@training.summary, :urls)%>
 </p>
 
 <%=link_to_if(@training.can_be_joined_by?(current_user), '加入', training_training_joins_path(@training), :method=>'post'){} %>
