--- a/app/views/match_invitations/edit.html.erb
+++ b/app/views/match_invitations/edit.html.erb
@@ -1,157 +1,157 @@
-<h1>Editing match_invitation</h1>
+<div>
+  <h1>比赛邀请</h1>
+</div>
 
 <%= error_messages_for :match_invitation %>
-
-<% form_for(@match_invitation) do |f| %>
+<% form_for @match_invitation, :html=>{:id=>"match_invitation_form"} do |f| %>  
+  
   <p>
-    <b>Start time</b><br />
-    <%= f.datetime_select :start_time %>
-  </p>
-
+    <b>约战球队</b><br />
+    <%if @editing_by_host_team == true%>
+        <%=link_to(@match_invitation.guest_team.shortname, team_view_path(@match_invitation.guest_team.id))%>
+    <%else%>
+        <%=link_to(@match_invitation.host_team.shortname, team_view_path(@match_invitation.guest_team.id))%>
+    <%end%>
+  </p>  
+      
   <p>
-    <b>Location</b><br />
-    <%= f.text_field :location %>
-  </p>
-
-  <p>
-    <b>Match type</b><br />
-    <%= f.text_field :match_type %>
-  </p>
-
-  <p>
-    <b>Size</b><br />
-    <%= f.text_field :size %>
-  </p>
-
-  <p>
-    <b>Has judge</b><br />
-    <%= f.check_box :has_judge %>
-  </p>
-
-  <p>
-    <b>Has card</b><br />
-    <%= f.check_box :has_card %>
-  </p>
-
-  <p>
-    <b>Has offside</b><br />
-    <%= f.check_box :has_offside %>
-  </p>
-
-  <p>
-    <b>Win rule</b><br />
-    <%= f.text_field :win_rule %>
-  </p>
-
-  <p>
-    <b>Description</b><br />
-    <%= f.text_area :description %>
-  </p>
-
-  <p>
-    <b>Half match length</b><br />
-    <%= f.text_field :half_match_length %>
-  </p>
-
-  <p>
-    <b>Rest length</b><br />
-    <%= f.text_field :rest_length %>
-  </p>
-
-  <p>
-    <b>Host team leader</b><br />
-    <%= f.text_field :host_team_leader_id %>
-  </p>
-
-  <p>
-    <b>Guest team leader</b><br />
-    <%= f.text_field :guest_team_leader_id %>
-  </p>
-
-  <p>
-    <b>Host team</b><br />
-    <%= f.text_field :host_team_id %>
-  </p>
-
-  <p>
-    <b>Guest team</b><br />
-    <%= f.text_field :guest_team_id %>
-  </p>
-
-  <p>
-    <b>Edit by host team</b><br />
-    <%= f.check_box :edit_by_host_team %>
-  </p>
-
-  <p>
-    <b>New start time</b><br />
+    <b>开始时间</b>
     <%= f.datetime_select :new_start_time %>
+    <%if( !@match_invitation.start_time.nil? && (@match_invitation.start_time!=@match_invitation.new_start_time))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.start_time) %>  
+        )
+    <%end%>
   </p>
 
   <p>
-    <b>New location</b><br />
+    <b>地点</b>
     <%= f.text_field :new_location %>
+    <%if(!@match_invitation.location.nil? && (@match_invitation.location!=@match_invitation.new_location))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.location) %>  
+        )
+    <%end%>    
   </p>
 
   <p>
-    <b>New match type</b><br />
-    <%= f.text_field :new_match_type %>
-  </p>
-
-  <p>
-    <b>New size</b><br />
-    <%= f.text_field :new_size %>
-  </p>
-
-  <p>
-    <b>New has judge</b><br />
-    <%= f.check_box :new_has_judge %>
-  </p>
-
-  <p>
-    <b>New has card</b><br />
-    <%= f.check_box :new_has_card %>
-  </p>
-
-  <p>
-    <b>New has offside</b><br />
-    <%= f.check_box :new_has_offside %>
-  </p>
-
-  <p>
-    <b>New win rule</b><br />
-    <%= f.text_field :new_win_rule %>
-  </p>
-
-  <p>
-    <b>New description</b><br />
+    <b>比赛简介</b><br />
     <%= f.text_area :new_description %>
+    <%if(!@match_invitation.description.nil? && (@match_invitation.description!=@match_invitation.new_description))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.description) %>
+        )
+    <%end%>       
+  </p>  
+  
+  
+  <p>
+    <b>比赛类型</b>
+    <%= f.select :new_match_type, MatchInvitation::MATCH_TYPES.map {|t| [match_type_text(t), t]} %>
+    <%if(!@match_invitation.match_type.nil? && (@match_invitation.match_type!=@match_invitation.new_match_type))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.match_type) %>  
+        )
+    <%end%>   
   </p>
 
   <p>
-    <b>New half match length</b><br />
-    <%= f.text_field :new_half_match_length %>
+    <b>参加人数</b>
+    <%= f.select :new_size, MatchInvitation::MATCH_SIZES %>
+    <%if(!@match_invitation.size.nil? && (@match_invitation.size!=@match_invitation.new_size))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.size) %>  
+        )
+    <%end%>    
   </p>
 
   <p>
-    <b>New rest length</b><br />
-    <%= f.text_field :new_rest_length %>
+    <b>有裁判</b><br />
+    <%= f.check_box :new_has_judge %>
+    <%if(!@match_invitation.has_judge.nil? && (@match_invitation.has_judge!=@match_invitation.new_has_judge))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.has_judge) %>  
+        )
+    <%end%>     
   </p>
 
   <p>
-    <b>New host team leader</b><br />
-    <%= f.text_field :new_host_team_leader_id %>
+    <b>有红黄牌</b><br />
+    <%= f.check_box :new_has_card %>
+    <%if(!@match_invitation.has_card.nil? && (@match_invitation.has_card!=@match_invitation.new_has_card))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.has_card) %>  
+        )
+    <%end%>     
   </p>
 
   <p>
-    <b>New guest team leader</b><br />
-    <%= f.text_field :new_guest_team_leader_id %>
+    <b>有越位</b><br />
+    <%= f.check_box :new_has_offside %>
+    <%if(!@match_invitation.has_offside.nil? && (@match_invitation.has_offside!=@match_invitation.new_has_offside))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.has_offside) %>  
+        )
+    <%end%>    
   </p>
 
   <p>
-    <%= f.submit "Update" %>
+    <b>上下半场各</b><br />
+    <%= f.text_field :new_half_match_length %>分钟
+    <%if(!@match_invitation.half_match_length.nil? && (@match_invitation.half_match_length!=@match_invitation.new_half_match_length))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.half_match_length) %>分钟 
+        )
+    <%end%>     
+  </p>
+
+  <p>
+    <b>中场休息</b><br />
+    <%= f.text_field :new_rest_length %>分钟
+    <%if(!@match_invitation.rest_length.nil? && (@match_invitation.rest_length!=@match_invitation.new_rest_length))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.rest_length) %>分钟 
+        )
+    <%end%>    
+  </p>  
+  
+  <p>
+    <b>决胜规则</b><br />
+    <%= f.select :new_win_rule, MatchInvitation::WIN_RULES.map {|r| [win_rule_text(r), r]} %>
+    <%if(!@match_invitation.win_rule.nil? && (@match_invitation.win_rule!=@match_invitation.new_win_rule))%>
+        (我队上次的设定是：
+        <%= h(@match_invitation.win_rule) %>
+        )
+    <%end%>   
+  </p>
+  
+  <%if @editing_by_host_team%>
+    <%if !@match_invitation.guest_team_message.nil?%>
+      <p>
+          <b><%=@match_invitation.guest_team.shortname%>的留言</b><br />
+          <%=h @match_invitation.guest_team_message%>
+      </p>
+    <%end%>
+    <p>
+      <b>留言给<%=@match_invitation.guest_team.shortname%></b><br />
+      <%= f.text_area :host_team_message %>      
+    </p>
+  <%else%>
+    <%if !@match_invitation.host_team_message.nil?%>
+      <p>
+          <b><%=@match_invitation.host_team.shortname%>的留言</b><br />
+          <%=h @match_invitation.host_team_message%>
+      </p>
+    <%end%>
+    <p>
+      <b>留言给<%=@match_invitation.host_team.shortname%></b><br />
+      <%= f.text_area :guest_team_message %>      
+    </p>    
+  <%end%>
+
+  <p>
+    <%=link_to '接受邀请', accept_match_invitation_path(@match_invitation), :onclick=>"var f = document.getElementById('match_invitation_form');f.method = 'POST'; f.action = this.href;f.submit();return false;"%>
+    <%=link_to '协商邀请', match_invitation_path(@match_invitation), :onclick=>"var f = document.getElementById('match_invitation_form');f.method = 'POST'; f.action = this.href;f.submit();var m = document.createElement('input'); m.setAttribute('type', 'hidden'); m.setAttribute('name', '_method'); m.setAttribute('value', 'put'); f.appendChild(m);f.submit();return false;"%>
+    <%=link_to "拒绝邀请", match_invitation_path(@match_invitation),:method=>"delete"%>
   </p>
 <% end %>
-
-<%= link_to 'Show', @match_invitation %> |
-<%= link_to 'Back', match_invitations_path %>
