--- a/app/views/team_views/show.html.erb
+++ b/app/views/team_views/show.html.erb
@@ -1,102 +1,46 @@
-<h1><%=h @team.shortname%></h1>
+<div>
+<%if logged_in?%>
+  <%= render(:partial => 'shared/team_menu', :locals => {:team => @team})%>
+<%end%>
+</div>
 
+<h1><%=h @team.shortname%></h1>
 <%= team_image_tag @team%>
 
-<p>
-  <label>全称</label>
-  <%= @team.name%>
-</p>
-
-<p>
-  <label>建队日期</label>
-  <%= @team.found_time%>
-</p>
-
-<p>
-  <label>球队风格</label>
-  <%=h @team.style%>
-</p>
-
-<p>
-  <label>球队简介</label>
-  <%=simple_format auto_link(@team.summary, :urls)%>
-</p>
-
-<%if logged_in?%>
-  <%if current_user.is_team_member_of?(@team)%>
-    <%= link_to("退出球队", team_join_path(@user_team.id),:method=>:delete){}%>
-  <%else%>
-    <%= error_messages_for :team_join_request %>
-    <% form_for :team_join_request, :url => team_join_requests_path, :method=>"POST" do |f| %>
-        <%= f.hidden_field :team_id,  :value=>@team.id%> 
-      <p>
-        <b>留言</b><br />
-        <%= f.text_area :message %>
-      </p>  
-      <p>
-        <%= f.submit "申请" %>
-      </p>
-    <% end %>
-  <%end%>
-
-  <%if current_user.is_team_admin_of?(@team)%>
-    <%= link_to "编辑队伍信息", edit_team_path(@team)%>
-    <%= link_to "创建训练", new_team_training_path(@team)%>
-    <%= link_to "所有入队申请", team_team_join_requests_path(@team)%>
-    <%= link_to "所有入队邀请", team_team_join_invitations_path(@team)%>
-    <%= link_to "成员管理", team_team_joins_path(@team)%>
-    <%= link_to "邀请朋友加入", new_team_team_join_invitation_path(@team)%>
-  <%end%>
-
-  <%if current_user.can_invite_team?(@team)%>
-    <%= link_to "邀请该队参加比赛", new_match_invitation_path(:guest_team_id=>@team)%>
-  <%end%>
+<div>
+<%= "<span>建队时间: #{@team.found_time}</span><br/>" unless @team.found_time.nil?%>
+<%= "<span>球队全名: #{@team.name}</span><br/>" unless @team.name.blank?%>
+<%= "<span>球队风格: #{@team.style}</span><br/>" unless @team.style.blank?%>
+<%if !@team.summary.nil? && !@team.summary.blank?%>
+    <label>球队简介：</label>
+    <p><%=simple_format auto_link(@team.summary, :urls)%></p>
 <%end%>
+</div>
 
+<div>
+<%if logged_in? %>
+<%if current_user.is_team_member_of?(@team)%>
+  <%= link_to("退出球队", team_join_path(@user_team.id),:method=>:delete)%>
+<%else%>
+  <%= link_to("申请加入球队", 'javascript:void(0);')%>
+  <% form_for :team_join_request, :url => team_join_requests_path, :method=>"POST" do |f| %>
+    <%= f.hidden_field :team_id,  :value=>@team.id%> 
+    <span>留言</span><br />
+    <%= f.text_area :message %>
+    <%= f.submit "申请" %>
+  <% end %>
+<%end%>
+<%end%>
+</div>
+      
 <h1><%=h @team.shortname%>的成员</h1>
-<%@users.each do |user| %>
-  <dl>
-    <dt><%=link_to  user_image_tag(user), user_view_path(user.id) %></dt>
-    <dd><%=link_to user.nickname, user_view_path(user.id)%></dd>
-  </dl>
-<%end%>
+<%= render(:partial => 'shared/user_icon', :collection => @users)%>
 
 <h1><%=h @team.shortname%>最近的训练</h1>
-<table>
-  <tr>
-    <th>日期</th>
-    <th>时间</th>
-    <th>地点</th>
-    <th></th>
-  </tr>
-  <%@trainings.each do |t|%>
-    <tr>
-      <td><%= t.start_time.strftime('%Y-%m-%d')%></td>
-      <td><%= t.start_time.strftime('%H:%M')%>-<%= t.end_time.strftime('%H:%M')%></td>
-      <td><%=h t.location%></td>
-      <td><%=link_to '查看', training_view_path(t)%></td>
-    </tr>
-  <%end%>
-</table>
+<%= render(:partial => 'shared/training_list', :object => @trainings)%>
 
 <h1><%=h @team.shortname%>下的讨论</h1>
-<table>
-  <tr>
-    <th>话题</th>
-    <th>作者</th>
-    <th>回复</th>
-    <th>最后回复</th>
-  </tr>
-
-<% for post in @posts %>
-  <tr>
-    <td><%=link_to h(post.title), post  %></td>
-    <td><%=h post.user.nickname %></td>
-    <td><%= post.replies.size %></td>
-    <td><%= post.updated_at.strftime('%Y-%m-%d %H:%M:%S') %></td>
-  </tr>
-<% end %>
-</table>
+<%= render(:partial => 'shared/post_list', :object => @posts)%>
 
 <br />
 <%= link_to '发言', new_team_post_path(@team) %>
