--- a/app/views/team_join_invitations/index_user.html.erb
+++ b/app/views/team_join_invitations/index_user.html.erb
@@ -1,30 +1,13 @@
-<div>
-  <h1>邀请的用户列表</h1>
-</div>
-<table>
-  <tr>
-    <th>时间</th>
-    <th>用户</th>
-    <th>留言</th>
-    <th></th>
-    <th></th>   
-  </tr>
-  
-<% for req in @req %>
-  <tr>
-    <td><%=h req.apply_date %></td>
-    <td><%= link_to req.user.nickname, user_path(req.user_id) %></td>
-    <td><%=h req.message %></td>
-    <%if req.user_id == current_user.id%>
-      <td><%= link_to '接受', team_joins_path(:id=>req.id), :method => :post %></td>
-      <td><%= link_to '拒绝', team_join_invitation_path(req.id), :method => :delete %></td>
+<h1><%=h @team.shortname%>邀请加入的用户</h1>
+
+<% for req in @requests %>
+  <div>
+    <%= render :partial => "shared/user_icon", :object => req.user%>
+    <span>申请日期: <%= req.apply_date.to_s(:db) %></span><br/>
+    <%if !req.message.nil? && !req.message.blank?%>
+      <span>留言: </span>
+      <p><%=simple_format req.message%></p>
     <%end%>
-  </tr>
+    <%= link_to '撤销邀请', team_join_invitation_path(req.id, :back_uri => request.request_uri), :method => :delete %>
+  </div>
 <% end %>
-</table>
-
-<%#= link_to 'Previous page', admin_user_url({ :page => @user_pages.current.previous }) if @user_pages.current.previous %>
-<%#= link_to 'Next page', admin_user_url({ :page => @user_pages.current.next }) if @user_pages.current.next %> 
-
-
-
