--- a/app/views/team_join_requests/index_team.html.erb
+++ b/app/views/team_join_requests/index_team.html.erb
@@ -1,26 +1,13 @@
-<div>
-  <h1>申请加入的球队列表</h1>
-</div>
-<table>
-  <tr>
-    <th>时间</th>
-    <th>球队</th>
-    <th>留言</th>
-    <th></th>
-    <th></th>   
-  </tr>
-  
+<h1>我申请加入的球队</h1>
+
 <% for req in @requests %>
-  <tr>
-    <td><%=h req.apply_date %></td>
-    <td><%= link_to req.team.name, team_path(req.team_id) %></td>
-    <td><%=h req.message %></td>
-  </tr>
+  <div>
+    <%= render :partial => "shared/team_icon", :object => req.team%>
+    <span>申请日期: <%= req.apply_date.to_s(:db) %></span><br/>
+    <%if !req.message.nil? && !req.message.blank?%>
+      <span>留言: </span>
+      <p><%=simple_format req.message%></p>
+    <%end%>
+    <%= link_to '撤销申请', team_join_request_path(req.id, :back_uri => request.request_uri), :method => :delete %>
+  </div>
 <% end %>
-</table>
-
-<%#= link_to 'Previous page', admin_user_url({ :page => @user_pages.current.previous }) if @user_pages.current.previous %>
-<%#= link_to 'Next page', admin_user_url({ :page => @user_pages.current.next }) if @user_pages.current.next %> 
-
-
-
