--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,6 +7,12 @@
   <p><label for="birthday">生日</label><br/>
   <%= f.date_select :birthday, :start_year=>1900, :end_year=>Date.today.year %></p>
   
+  <p><label for="birthday_display_type">生日显示方式</label><br/>
+  <%= f.select :birthday_display_type, [["不显示", 0], ["显示年月日", 1], ["显示月日", 2], ["显示年", 3]] %>
+  
+  <p><label for="city">所在地</label><br/>
+  <%= f.province_city_select :city %>
+  
   <p><label for="favorite_star">我喜欢球星</label><br/>
   <%= f.text_field :favorite_star %></p>
   
