--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :nickname %></p>
   
   <p><label for="birthday">生日</label><br/>
-  <%= f.date_select :birthday, :start_year=>1900, :end_year=>Date.today.year %></p>
+  <%= f.date_select :birthday, :start_year=>1900, :end_year=>Date.today.year, :use_month_numbers => true %></p>
   
   <p><label for="birthday_display_type">生日显示方式</label><br/>
   <%= f.select :birthday_display_type, [["不显示", 0], ["显示年月日", 1], ["显示月日", 2], ["显示年", 3]] %>
