--- a/app/views/match_invitations/edit.html.erb
+++ b/app/views/match_invitations/edit.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <%= error_messages_for :match_invitation %>
-<% form_for @match_invitation, :html=>{:id=>"match_invitation_form"} do |f| %>  
+<% form_for :match_invitation, :url=>"", :html=>{:id=>"match_invitation_form"} do |f| %>  
   
   <p>
     <b>约战球队</b><br />
@@ -150,7 +150,7 @@
   <%end%>
 
   <p>
-    <%=link_to '接受邀请', accept_match_invitation_path(@match_invitation), :onclick=>"var f = document.getElementById('match_invitation_form');f.method = 'POST'; f.action = this.href;f.submit();return false;"%>
+    <%=link_to '接受邀请', matches_path(:id=>@match_invitation.id), :onclick=>"var f = document.getElementById('match_invitation_form');f.method = 'POST'; f.action = this.href;f.submit();return false;"%>
     <%=link_to '协商邀请', match_invitation_path(@match_invitation), :onclick=>"var f = document.getElementById('match_invitation_form');f.method = 'POST'; f.action = this.href;f.submit();var m = document.createElement('input'); m.setAttribute('type', 'hidden'); m.setAttribute('name', '_method'); m.setAttribute('value', 'put'); f.appendChild(m);f.submit();return false;"%>
     <%=link_to "拒绝邀请", match_invitation_path(@match_invitation),:method=>"delete"%>
   </p>
