--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,15 +4,16 @@
 
 <%= render(:partial => 'shared/post', :collection => @post.replies, :locals => {:parent => @post})%>
 
-<%= error_messages_for :reply %>
-  
-<% form_for :reply, :url => post_replies_path(@post) do |f| %>
-  <p>
-    <b>内容</b><br />
-    <%= f.text_area :content %>
-  </p>
+<%if @can_reply%>
+  <%= error_messages_for :reply %>
+  <% form_for :reply, :url => post_replies_path(@post) do |f| %>
+    <p>
+      <b>内容</b><br />
+      <%= f.text_area :content %>
+    </p>
 
-  <p>
-    <%= f.submit "提交" %>
-  </p>
-<% end %>
+    <p>
+      <%= f.submit "提交" %>
+    </p>
+  <% end %>
+<%end%>
