--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,4 +1,5 @@
 <%= error_messages_for :team %>
+
 <% form_for @team do |f| %>
 
 <%= render :partial => "form", :locals=>{:f=> f}%>
@@ -6,7 +7,7 @@
 <p><%= submit_tag '修改' %></p>
 <% end %>
 
-<% form_for(@team, :html => { :multipart => true }) do |f| %>
+<% form_for(:team, :url => update_image_team_path(@team),:html => { :method=>:put, :multipart => true }) do |f| %>
   <%= team_image_tag @team %>
   <p>
     <label>更改队标</label><br/>
