--- a/app/views/shared/_user_menu.html.erb
+++ b/app/views/shared/_user_menu.html.erb
@@ -1,13 +1,35 @@
-<%if user.id != current_user.id%>
-  <ul>
-    <li><%= link_to("邀请入队", new_team_join_invitation_path(:user_id => user.id))%></li>
-  </ul>
+<%if logged_in? %>
+<div>
+<ul>
+<%if user.id == current_user.id%>
+  <li><%= link_to("我的收件箱", messages_path(:as=>'receiver'))%></li>
+  <li><%= link_to("我的朋友邀请", friend_invitations_path)%></li>
+  <li><%= link_to("我的球队邀请", team_join_invitations_path)%></li>
+  <li><%= link_to("我的入队申请", team_join_requests_path)%></li>
+  <li><%= link_to("修改我的信息", edit_user_path(user))%></li>
 <%else%>
-  <ul>
-    <li><%= link_to("修改个人信息", edit_user_path(user))%></li>
-    <li><%= link_to("收件箱", messages_path(:as=>'receiver'))%></li>
-    <li><%= link_to("希望和我成为朋友的用户", friend_invitations_path)%></li>
-    <li><%= link_to("邀请我加入的球队", team_join_invitations_path)%></li>
-    <li><%= link_to("我申请加入的球队", team_join_requests_path)%></li>
-  </ul>
+  <li><%= link_to("发信", new_message_path(:to=>user.id))%></li>
+  <%if !current_user.is_my_friend?(user)%>
+    <li><%= link_to("邀请加为好友", 'javascript:void(0);')%></li>
+  <%else%>
+    <li><%= link_to("不和他玩", friend_relation_path(0, :user_id=>user.id),:method=>"delete")%></li>
+  <%end%>
+  <li><%= link_to("邀请入队", new_team_join_invitation_path(:user_id => user.id))%></li>
+<%end%>
+</ul>
+</div>
+
+<div>
+<%if user.id != current_user.id && !current_user.is_my_friend?(user)%>
+<div id="senf_friend_invitation_div">
+  <% form_for :friend_invitation, :url => friend_invitations_path, :method=>"POST" do |f| %>
+      <%= f.hidden_field :host_id,  :value=>user.id%>
+      <span>留言</span><br />
+      <%= f.text_area :message %>
+      <%= f.submit "发送邀请" %>
+  <% end %>  
+</div>
+<%end%>
+</div>
+
 <%end%>
