--- a/app/views/friend_relations/index.html.erb
+++ b/app/views/friend_relations/index.html.erb
@@ -1,6 +1,4 @@
-<div>
-  <h1>好友列表</h1>
-</div>
+<h1><%= h @title%></h1>
 
 <%= render(:partial => 'shared/user_icon', :collection => @friendsList)%>
 
