--- a/app/views/team_joins/index_team.html.erb
+++ b/app/views/team_joins/index_team.html.erb
@@ -1,15 +1,5 @@
-<div>
-  <h1>加入的球队列表</h1>
-</div>
+<h1><%= h @title%></h1>
 
 <%@uts.each do |ut| %>
-  <div>
-    <%=link_to ut.team.shortname, team_path(ut.team.id)%>
-  </div>
+  <%= render(:partial => 'shared/team_icon', :object => ut.team)%>
 <%end%>
-
-<%#= link_to 'Previous page', admin_user_url({ :page => @user_pages.current.previous }) if @user_pages.current.previous %>
-<%#= link_to 'Next page', admin_user_url({ :page => @user_pages.current.next }) if @user_pages.current.next %> 
-
-
-
